	     to update the client grant space info.

Severity   : normal
Frequency  : rare 
Bugzilla   : 12401
Description: Checking Stale with correct fid 
Details    : ll_revalidate_it should uses de_inode instead of op_data.fid2 
	     to check whether it is stale, because sometimes, we want the 
	     enqueue happened anyway, and op_data.fid2 will not be initialized.
     

--------------------------------------------------------------------------------

2007-05-03  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0.1
       * bug fixes

Severity   : normal
Frequency  : on some architectures
Bugzilla   : 12404
Description: 1.6 client sometimes fails to mount from a 1.4 MDT
Details    : Uninitialized flags sometimes cause configuration commands to
	     be skipped.

Severity   : normal
Frequency  : patchless clients only
Bugzilla   : 12391
Description: missing __iget() symbol export
Details    : The __iget() symbol export is missing.  To avoid the need for
	     this on patchless clients the deathrow inode reaper is turned
	     off, and we depend on the VM to clean up old inodes.  This
	     dependency was during via the fix for bug 12181.

--------------------------------------------------------------------------------

2007-04-19  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0
       * CONFIGURATION CHANGE.  This version of Lustre WILL NOT
	 INTEROPERATE with older versions automatically.  In many cases a
	 special upgrade step is needed. Please read the
	 user documentation before upgrading any part of a 1.4.x system.
       * WARNING: Lustre configuration and startup changes are required with
	 this release.  See https://mail.clusterfs.com/wikis/lustre/MountConf
	 for details.
       * Support for kernels:
        2.4.21-47.0.1.EL (RHEL 3)
        2.6.5-7.283 (SLES 9)
        2.6.9-42.0.10.EL (RHEL 4)
        2.6.12.6 vanilla (kernel.org)
        2.6.16.27-0.9 (SLES10)
       * Client support for unpatched kernels: