@@ -110,7 +110,7 @@ void obd_sysctl_init (void)
 {
 #ifdef CONFIG_SYSCTL
         if ( !obd_table_header )
-                obd_table_header = register_sysctl_table(parent_table, 0);
+                obd_table_header = cfs_register_sysctl_table(parent_table, 0);
 #endif
 }
 
@@ -118,7 +118,7 @@ void obd_sysctl_clean (void)
 {
 #ifdef CONFIG_SYSCTL
         if ( obd_table_header )
-                unregister_sysctl_table(obd_table_header);
+                cfs_unregister_sysctl_table(obd_table_header);
         obd_table_header = NULL;
 #endif
 }
